Bug 317907 - Don't write a highscore if the score is 0
Summary: Don't write a highscore if the score is 0
Status: RESOLVED FIXED
Alias: None
Product: kbounce
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Roney Gomes
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-04-06 02:32 UTC by André Marcelo Alvarenga
Modified: 2013-04-13 23:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments
Screenshot (28.20 KB, image/png)
2013-04-06 02:33 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2013-04-06 02:32:56 UTC
This occurs if there is a empty rank.

See screenshot

Reproducible: Always
Comment 1 André Marcelo Alvarenga 2013-04-06 02:33:34 UTC
Created attachment 78670 [details]
Screenshot
Comment 2 Roney Gomes 2013-04-08 15:13:59 UTC
This is not actually a problem with KBounce. The high score dialog is provided by libkdegames. Even so, that's really and odd behavior and I think it should be changed.

I'll take care of it as soon as I have some time available, unless other people comes first, of course.
Comment 3 Roney Gomes 2013-04-13 15:47:36 UTC
Hello André.

It seems that I prematurely assumed that the bug resided on libkdegames. It's really a KBounce bug.

I sent a patch to revision and will push it to the 4.10 branch as soon as it gets approved. The update will be released on May 7, by KDE.

However, end user availability depends on your system's package management.
Comment 4 Roney Gomes 2013-04-13 19:27:00 UTC
Git commit 23440210765beb6ff465b5c8809619af829a1e6a by Roney Gomes.
Committed on 13/04/2013 at 21:04.
Pushed by roneygomes into branch '4.10'.

Don't add empty scores to the highscores table.

As said in the descprition, this change avoids the inclusion of empty
scores, i.e.: when it's equal to zero, in the high scores list.

It doesn't make any sense to threat zero as a valid score, let alone
write it in the high scores table (which is meant for exposing the
player's best matches).
FIXED-IN: 4.10
REVIEW: 109999

M  +4    -0    mainwindow.cpp

http://commits.kde.org/kbounce/23440210765beb6ff465b5c8809619af829a1e6a